fix tag styling in case tabs to improve text wrapping

--- a/src/cases/views/components/case-tabs/_case-tabs.scss
+++ b/src/cases/views/components/case-tabs/_case-tabs.scss
@@ -38,10 +38,10 @@
   }
 
   .govuk-tag {
-    white-space: nowrap;
     display: inline-block;
-    width: max-content;
-    max-width: none;
+    max-width: 100%;
+    white-space: normal;
+    overflow-wrap: anywhere;
   }
 
   [aria-sort] a:focus {
